[Fixes #112] Make many things scale better on mobile

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -65,6 +65,7 @@ html:not(.admin)>body>header {
 				line-height: 1;
 				padding-top: .1em;
 				margin-top: .2em;
+				white-space: nowrap;
 			}
 		}
 
