--- a/client/scss/vars.scss
+++ b/client/scss/vars.scss
@@ -28,7 +28,7 @@ $wire-width: 8px;
 
 
 
-$width-small: 125ch;
+$width-small: 700px;
 
 
 $font-header: Khand, sans-serif;
